--- a/index.html
+++ b/index.html
@@ -22,6 +22,24 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
+    <!-- This is Banner Section -->
+    <header>
+      <section
+        class="flex flex-row justify-between items-center border-2 mt-5 ml-20 mr-20 mx-auto py-2 px-5 bg-blue-200 rounded-lg shadow-lg mb-10"
+      >
+        <div class="">
+          <h1 class="font-bold text-4xl">Interactive</h1>
+          <p class="text-gray-500">Geometry Genius</p>
+        </div>
+        <div class="">
+          <button
+            class="btn rounded bg-blue-600 font-bold text-white hover:bg-blue-400 px-10 border-none text-lg"
+          >
+            Blog
+          </button>
+        </div>
+      </section>
+    </header>
     <script src="./js/triangle.js"></script>
   </body>
 </html>
