Cart Container section added

--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
         </div>
       </section>
     </header>
+
+    <!-- This is Main Section -->
+    <main class="lg:ml-20 lg:mr-20 lg:mx-auto mb-16">
+      <section class="flex flex-col md:flex-row gap-5">
+        <!-- Cart Part -->
+        <div
+          class="flex-1 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5"
+        ></div>
+      </section>
+    </main>
     <script src="./js/triangle.js"></script>
   </body>
 </html>
