--- a/index.html
+++ b/index.html
@@ -47,7 +47,56 @@
         <!-- Cart Part -->
         <div
           class="flex-1 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5"
-        ></div>
+        >
+          <!-- Cart-1 -->
+          <div
+            class="flex flex-col justify-center items-center gap-2 border-2 px-10 py-3 rounded-lg hover:bg-blue-300 hover:border-blue-300"
+          >
+            <img src="./images/triangle.png" alt="" />
+            <h1 class="font-bold">Triangle</h1>
+            <p>Area(A) = 0.5 x b x h</p>
+            <p>
+              Area of Triangle: <span id="triangle-area-display">0</span>cm<sup
+                >2</sup
+              >
+            </p>
+
+            <!-- Input Filed -->
+            <div class="flex flex-row gap-5 items-center justify-center">
+              <!-- Base -->
+              <div class="flex flex-row gap-1 justify-center items-center">
+                <input
+                  id="triangle-base"
+                  class="w-16 px-2 py-1"
+                  type="text"
+                  placeholder="Base"
+                  id=""
+                />
+                <p>cm</p>
+              </div>
+
+              <!-- Height -->
+              <div class="flex flex-row gap-1 justify-center items-center">
+                <input
+                  id="triangle-height"
+                  class="w-16 px-2 py-1"
+                  type="text"
+                  placeholder="Height"
+                  name=""
+                  id=""
+                />
+                <p>cm</p>
+              </div>
+            </div>
+
+            <button
+              id="triangle-area-calculate"
+              class="btn rounded bg-blue-700 text-white w-full font-bold border-2 border-blue-700 hover:bg-transparent hover:border-2 hover:border-blue-700 hover:text-black mt-5 mb-2"
+            >
+              Calculate
+            </button>
+          </div>
+        </div>
       </section>
     </main>
     <script src="./js/triangle.js"></script>
