--- a/index.html
+++ b/index.html
@@ -142,6 +142,52 @@
               Calculate
             </button>
           </div>
+
+          <!-- Cart-3 -->
+          <div
+            class="flex flex-col justify-center items-center gap-2 border-2 px-10 py-3 rounded-lg hover:bg-blue-300 hover:border-blue-300"
+          >
+            <img class="mb-3 mt-7" src="./images/parallelogram.png" alt="" />
+            <h1 class="font-bold">Parallelogram</h1>
+            <p>Area(A) = w x l</p>
+            <p>
+              Area of Paralleo:
+              <span id="parallelogram-area-display">0</span>cm<sup>2</sup>
+            </p>
+
+            <!-- Input Filed -->
+            <div class="flex flex-row gap-5 items-center justify-center">
+              <!-- Base -->
+              <div class="flex flex-row gap-1 justify-center items-center">
+                <input
+                  class="w-16 px-2 py-1"
+                  type="text"
+                  placeholder="Width"
+                  id="parallelogram-base"
+                />
+                <p>cm</p>
+              </div>
+
+              <!-- Height -->
+              <div class="flex flex-row gap-1 justify-center items-center">
+                <input
+                  class="w-16 px-2 py-1"
+                  type="text"
+                  placeholder="Length"
+                  name=""
+                  id="parallelogram-height"
+                />
+                <p>cm</p>
+              </div>
+            </div>
+
+            <button
+              id="parallelogram-area-calculate"
+              class="btn rounded bg-blue-700 text-white w-full font-bold border-2 border-blue-700 hover:bg-transparent hover:border-2 hover:border-blue-700 hover:text-black mt-5 mb-2"
+            >
+              Calculate
+            </button>
+          </div>
         </div>
       </section>
     </main>
