--- a/index.html
+++ b/index.html
@@ -188,6 +188,47 @@
               Calculate
             </button>
           </div>
+
+          <!-- Cart-4 -->
+          <div
+            class="flex flex-col justify-center items-center gap-2 border-2 px-10 py-3 rounded-lg hover:bg-blue-300 hover:border-blue-300"
+          >
+            <img src="./images/rhombus.png" alt="" />
+            <h1 class="font-bold">Rhombus</h1>
+            <p>Area(A) = 0.5 x d<sub>1</sub> x d<sub>2</sub></p>
+
+            <!-- Input Filed -->
+            <div class="flex flex-row gap-5 items-center justify-center">
+              <!-- Base -->
+              <div class="flex flex-row gap-1 justify-center items-center">
+                <input
+                  class="w-16 px-2 py-1"
+                  type="text"
+                  placeholder="D1"
+                  id=""
+                />
+                <p>cm</p>
+              </div>
+
+              <!-- Height -->
+              <div class="flex flex-row gap-1 justify-center items-center">
+                <input
+                  class="w-16 px-2 py-1"
+                  type="text"
+                  placeholder="D2"
+                  name=""
+                  id=""
+                />
+                <p>cm</p>
+              </div>
+            </div>
+
+            <button
+              class="btn rounded bg-blue-700 text-white w-full font-bold border-2 border-blue-700 hover:bg-transparent hover:border-2 hover:border-blue-700 hover:text-black mt-5 mb-2"
+            >
+              Calculate
+            </button>
+          </div>
         </div>
       </section>
     </main>
