Area calculation aside part code added

--- a/index.html
+++ b/index.html
@@ -313,6 +313,28 @@
           </div>
           <!-- End of Card -->
         </div>
+
+        <!-- Area Part -->
+        <div class="w-80 border-2 h-72">
+          <h1 class="font-bold underline text-center mt-2 text-xl mb-4">
+            Area Calcutaion
+          </h1>
+
+          <div class="px-5">
+            <!-- Ul and li list -->
+            <ol id="aside-ol" class="flex flex-col gap-2">
+              <!-- <li class="flex flex-row gap-5 justify-start items-start">
+                  <p>Trianlge</p>
+                  <p><span id="area-display-aside">25</span>cm<sup>2</sup></p>
+                  <button
+                    class="w-24 h-7 text-xs rounded bg-blue-700 font-bold text-white hover:bg-blue-300 hover:text-black"
+                  >
+                    Convert to m<sup>2</sup>
+                  </button>
+                </li> -->
+            </ol>
+          </div>
+        </div>
       </section>
     </main>
     <script src="./js/triangle.js"></script>
