--- a/index.html
+++ b/index.html
@@ -337,6 +337,6 @@
         </div>
       </section>
     </main>
-    <script src="./js/triangle.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
